
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/popupFragmentBackgroundColor"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout android:id="@+id/einstellungenLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp">
        <TextView android:textSize="@dimen/popup_fragment_text_size"
            android:gravity="right|center_vertical"
            android:id="@+id/uriTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hostTextView"
            android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/popup_fragment_text_size"
            android:gravity="right|center_vertical"
            android:id="@+id/pfadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/popup_fragment_margin"
            android:text="@string/pfadTextView"
            android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/popup_fragment_text_size"
            android:gravity="right|center_vertical"
            android:id="@+id/rootTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/popup_fragment_margin"
            android:text="@string/rootTextView"
            android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">
        <EditText android:textSize="@dimen/popup_fragment_text_size"
            android:id="@+id/uriEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hostEditTextHint"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:inputType="textAutoComplete|textUri" />
        <EditText android:textSize="@dimen/popup_fragment_text_size"
            android:id="@+id/pfadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/popup_fragment_margin"
            android:hint="@string/pfadEditTextHint"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:inputType="textAutoComplete|textUri" />
        <EditText android:textSize="@dimen/popup_fragment_text_size"
            android:id="@+id/rootEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/popup_fragment_margin"
            android:hint="@string/rootEditTextHint"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:inputType="textAutoComplete|textPassword" />
    </LinearLayout>
</LinearLayout>
<android.support.v7.widget.AppCompatCheckBox android:textSize="@dimen/popup_fragment_text_size"
    android:id="@+id/offlineModeCheckBox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/popup_fragment_margin"
    android:checked="false"
    android:text="@string/offlineModeCheckBoxText"
    android:layout_below="@+id/einstellungenLinearLayout" />
<android.support.v7.widget.AppCompatCheckBox android:textSize="@dimen/popup_fragment_text_size"
    android:id="@+id/showMessageCheckBox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/popup_fragment_margin"
    android:checked="true"
    android:text="@string/showMessageCheckBoxText"
    android:layout_below="@+id/offlineModeCheckBox" />
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/showMessageCheckBox">
    <Button android:textSize="@dimen/popup_fragment_text_size"
        android:id="@+id/acceptVerbindungButton"
        android:background="@drawable/round_button_drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popup_fragment_margin"
        android:text="@string/acceptVerbindungButton"
        android:layout_weight="1.0"
        android:onClick="onClick" />
    <Button android:textSize="@dimen/popup_fragment_text_size"
        android:id="@+id/cancelVerbindungButton"
        android:background="@drawable/round_button_drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popup_fragment_margin"
        android:text="@string/cancelVerbindungButton"
        android:layout_weight="1.0"
        android:onClick="onClick" />
</LinearLayout>
</RelativeLayout>
