<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="200dp"
    android:layout_marginTop="60dp"
    android:layout_marginRight="200dp"
    android:layout_marginBottom="60dp"
    tools:context="de.akbk_horrem.zentralwerkstatt.gereatepruefung_2.MainFragment">

    <Button android:enabled="true" android:textSize="@dimen/main_activity_text_size" android:layout_gravity="fill" android:id="@+id/loginButton" android:background="@drawable/round_button_drawable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_activity_margin" android:layout_marginBottom="@dimen/main_activity_margin" android:text="@string/login_button_text" android:layout_weight="1.0" android:onClick="onClick" />
    <Button android:enabled="false" android:textSize="@dimen/main_activity_text_size" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/pruefenButton" android:background="@drawable/round_button_drawable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_activity_margin" android:layout_marginBottom="@dimen/main_activity_margin" android:text="@string/pruefen_button_text" android:layout_weight="1.0" android:onClick="onClick" />
    <Button android:enabled="true" android:textSize="@dimen/main_activity_text_size" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/verbindungButton" android:background="@drawable/round_button_drawable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_activity_margin" android:layout_marginBottom="@dimen/main_activity_margin" android:text="@string/verbindung_button_text" android:layout_weight="1.0" android:onClick="onClick" />
    <Button android:enabled="false" android:textSize="@dimen/main_activity_text_size" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/einstellungenButton" android:background="@drawable/round_button_drawable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_activity_margin" android:layout_marginBottom="@dimen/main_activity_margin" android:text="@string/einstellungen_button_text" android:layout_weight="1.0" android:onClick="onClick" />
    <Button android:enabled="false" android:textSize="@dimen/main_activity_text_size" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/syncButton" android:background="@drawable/round_button_drawable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_activity_margin" android:layout_marginBottom="@dimen/main_activity_margin" android:text="@string/sync_button_text" android:layout_weight="1.0" android:onClick="onClick" />

</LinearLayout>
